@@ -50,6 +50,7 @@ t/50-mech-get-nonexistent.t
 t/50-mech-get.t
 t/50-mech-new-dsl.t
 t/50-mech-new.t
+t/50-mech-start-url.t
 t/50-mech-status.t
 t/50-popup.t
 t/51-mech-form-with-fields.t
